# stryderx_hardware

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  package.xml  uncrustify.cfg
cmake/: .uncrustify.cfg  Doxygen.cmake  Executables.cmake  Linter.cmake  Linting.cmake
include/: CMakeLists.txt  camera_server.h  camera_server_node.h  joystick_teleop.h
scripts/: drive_controller  motor_control_node.py  steering_controller  steering_servo_node.py
src/: CMakeLists.txt  camera_server.cpp  camera_server_node.cpp  joystick_teleop.cpp
